# esai-mapping-validation

./: .gitattributes  .gitignore  ANNOTATION_GUIDE.md  MAPPING_IMPROVEMENTS.md  METHODOLOGY.md  README.md  pyproject.toml
.github/workflows/: ci.yml
gold/: README.md
mapping_validation/: __init__.py  cli.py  io.py  provenance.py  review.py  runner.py  sampling.py  schema.py  scoring.py  workbook.py
prompts/: harm_candidate_selection_v1.txt  rubric_v1.txt  rubric_v2.txt  rubric_v3_mapping_validator.txt
sources/: README.md
tests/: conftest.py  test_provenance.py  test_review.py  test_runner.py  test_sampling.py  test_scoring.py  test_workbook.py
