[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "esai-mapping-validation"
version = "0.2.0"
description = "Reproducible validation of ESAI benchmark-to-harm mappings"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openpyxl>=3.1,<4",
  "pandas>=2.2,<3",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.52,<1"]
dev = ["pytest>=8.3,<9", "ruff>=0.12,<1"]

[project.scripts]
esai-validate = "mapping_validation.cli:main"

[tool.setuptools.packages.find]
include = ["mapping_validation*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
